--- a/blog/app/Resources/views/blog/index.html.twig
+++ b/blog/app/Resources/views/blog/index.html.twig
@@ -13,9 +13,9 @@
                             {{ article.summary }}
                         </p>
 
-                        <small class="author">
-                            {{ article.author }}
-                        </small>
+                        {#<small class="author">#}
+                            {#{{ article.author }}#}
+                        {#</small>#}
 
                         <footer>
                             <div class="pull-right">
