--- a/blog/app/Resources/views/article/article.html.twig
+++ b/blog/app/Resources/views/article/article.html.twig
@@ -13,9 +13,9 @@
                         {{ article.content }}
                     </p>
 
-                    <small class="author">
-                        {{ article.author }}
-                    </small>
+                    {#<small class="author">#}
+                        {#{{ article.author }}#}
+                    {#</small>#}
 
                     <footer>
                         <div class="pull-right">
